--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".pages.mainfragment.MainFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/mainRecycleView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
 </FrameLayout>
