--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -13,10 +13,10 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             app:cardBackgroundColor="@color/purple_200"
             app:cardCornerRadius="8dp"
             app:cardElevation="5dp"
-            android:layout_gravity="right"
             app:cardPreventCornerOverlap="true"
             app:cardUseCompatPadding="true">
 
@@ -40,6 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/city_name"
                     app:layout_constraintStart_toStartOf="@+id/city_name"
                     app:layout_constraintTop_toBottomOf="@+id/city_name"
                     tools:text="Temperature" />
@@ -50,6 +51,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/city_temperature"
                     app:layout_constraintStart_toStartOf="@+id/city_temperature"
                     app:layout_constraintTop_toBottomOf="@+id/city_temperature"
                     tools:text="Feels Like" />
@@ -64,10 +66,13 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="8dp"
             android:elevation="6dp"
             tools:srcCompat="@tools:sample/avatars" />
 
