done logic to "Add Button". Changed backgroud not ready yet

--- a/app/src/main/res/drawable/gradient_background_world_item.xml
+++ b/app/src/main/res/drawable/gradient_background_world_item.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:startColor="#D5C1DD"
-        android:centerColor="#1325C9"
-        android:endColor="#CF0C4B"
+        android:centerColor="#228F4E"
+        android:endColor="#2215CF"
         android:angle="-45" />
 </shape>
