--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -1,49 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/edit_name"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="Название">
+   <com.google.android.material.card.MaterialCardView
+       android:id="@+id/card_city"
+       android:layout_width="300dp"
+       android:layout_height="wrap_content"
+       app:strokeColor="@color/black"
+       app:cardCornerRadius="15dp"
+       app:strokeWidth="5dp"
+       >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/city_name_dialog"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
+       <androidx.constraintlayout.widget.ConstraintLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
 
-    </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="Ширина">
+           <com.google.android.material.textfield.TextInputLayout
+               android:id="@+id/textInputLayout"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintStart_toStartOf="parent"
+               app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/lan_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
+               <com.google.android.material.textfield.TextInputEditText
+                   android:id="@+id/city_name_dialog"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:hint="Input City" />
+           </com.google.android.material.textfield.TextInputLayout>
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="Долгота">
-
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/lon_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+       </androidx.constraintlayout.widget.ConstraintLayout>
+   </com.google.android.material.card.MaterialCardView>
 
 
 </LinearLayout>
